Introduce KateLineLayout::invalid

Instead of returning null, we can return this value.

BUG: 460589